[package]
name = "tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="top-down"
path="src/top-down.rs"

[[bin]]
name="bottom-up"
path="src/bottom-up.rs"

[[bin]]
name="knapsack"
path="src/knapsack.rs"

[dependencies]
